--- a/proll1/var_and_sub.org
+++ b/proll1/var_and_sub.org
@@ -1,18 +1,26 @@
 
 
+
+
+* main 
+
+
+#+begin_src scheme :tangle src_out/var_and_sub.rkt
+
+
 (module var_and_sub racket 
 
-        ; supertype for all structures, that make up the interpreter - universes must not bleed into each other 
+	; supertype for all structures, that make up the interpreter - universes must not bleed into each other 
         (struct proll-type ()) 
-        ; 
+	; 
         (struct Var proll-type (Name line)
-                #:methods gen:custom-write [(define (write-proc V port w?) 
-                                              (fprintf port "~a:l~s" (Var-Name V) (Var-line V) ) ) ]
-                )
+		#:methods gen:custom-write [(define (write-proc V port w?) 
+					      (fprintf port "~a:l~s" (Var-Name V) (Var-line V) ) ) ]
+		)
         (struct empty proll-type ()
-                #:methods gen:custom-write [(define (write-proc e port w? )
-                                              (fprintf port "|_|")   )]
-                )
+		#:methods gen:custom-write [(define (write-proc e port w? )
+					      (fprintf port "|_|")   )]
+		)
         (define (RVal? X) (not (proll-type? X )))
         
 
@@ -20,14 +28,14 @@
         (struct sub proll-type ())
         
         (struct empty-sub sub ()
-                #:methods gen:custom-write [(define (write-proc e port w?)
-                                              (fprintf port "[<>]")   ) ] 
-                )
+		#:methods gen:custom-write [(define (write-proc e port w?)
+					      (fprintf port "[<>]")   ) ] 
+		)
 
 
-        ; elementary substitution X -> Y
-        ; where X must be a run-time-variable 
-        ; and Y Variable, <empty> or any payload term ( racket data, is not in one of the interpreter private types ) 
+	; elementary substitution X -> Y
+	; where X must be a run-time-variable 
+	; and Y Variable, <empty> or any payload term ( racket data, is not in one of the interpreter private types ) 
 
         (struct elem-sub proll-type (lhs rhs) 
                 #:transparent 
@@ -37,26 +45,26 @@
                                  (or (Var? rhs) (RVal? rhs) (empty? rhs)))
                             (values lhs rhs)]
                            [else (error (format "invalid arguments for elem-sub (%s,%s)" lhs rhs )) ]
-                           ))
-                #:methods gen:custom-write [(define (write-proc elemS port w? ) (match-let ( [(elem-sub lhs rhs) elemS])
-                                                                                  (fprintf port "[~s->~s]"  lhs rhs))  )]
-                )
-        
-        ; essentially a list of elem-sub
-        
+			   ))
+		#:methods gen:custom-write [(define (write-proc elemS port w? ) (match-let ( [(elem-sub lhs rhs) elemS])
+										  (fprintf port "[~s->~s]"  lhs rhs))  )]
+		)
+	
+	; essentially a list of elem-sub
+	
         (struct sub-comp sub (e S)
                 #:transparent
                 #:guard (lambda (e S t-name )
                           (match* (e S) 
                                  [ ( (elem-sub _ _) (or (empty-sub) (sub-comp _ _ )) ) (values e S )]
                                  [ ( _ _ ) (error "") ]))
-                #:methods gen:custom-write [(define (write-proc X port w? ) (match-let [((sub-comp A B) X ) ] 
-                                                                              (fprintf port "~s , ~s" A B )  ) )]
-                )
+		#:methods gen:custom-write [(define (write-proc X port w? ) (match-let [((sub-comp A B) X ) ] 
+									      (fprintf port "~s , ~s" A B )  ) )]
+		)
 
 
         ; for a given left-hand-side return the first right hand side, that occurs in 
-        ; the substitution set ( sub-comp ) 
+	; the substitution set ( sub-comp ) 
 
         (define (assoc  lhs S )
           (cond 
@@ -66,8 +74,8 @@
            [else (assoc lhs (sub-comp-S S))]
            ))
 
-        ; in case of the right hand side beeing a variable too - the lookup must be done anew 
-        ; Example ( X =:= Y ), ( Y=:=5), (query X ) 
+	; in case of the right hand side beeing a variable too - the lookup must be done anew 
+	; Example ( X =:= Y ), ( Y=:=5), (query X ) 
 
         (define (assoc* X S)
           (match (assoc X S)
@@ -103,7 +111,7 @@
                       [ ( (Var _ _) _ ) (ex X_ Y_ S ) ]
                       [ ( _ (Var _ _) ) (ex Y_ X_ S ) ] 
                       [ ( (cons Xh Xt) (cons Yh Yt))    ; cons cells as the only structural element unify can "look into" 
-                                                        ; other data structures need to be explicitly supported here 
+                       					; other data structures need to be explicitly supported here 
                         (match (unify Xh Yh S )
                                [ 'fail 'fail ]
                                [ (and S_ (sub)) (unify Xt Yt S_) ])]
@@ -121,10 +129,10 @@
                  [ (cons H T) (cons (query H S) (query T S )) ]
                  [ (or (? RVal?) (empty) ) X ]))
 
-        (define (ext-s V X Sub)
-          (sub-comp (elem-sub V X ) Sub ))
+	(define (ext-s V X Sub)
+	  (sub-comp (elem-sub V X ) Sub ))
 
-        (provide ext-s)
+	(provide ext-s)
 
 
                           
@@ -165,4 +173,10 @@
 
         ; -------------------------------- ;
 )
+
+
+#+end_src
+
+
+
 
