--- a/proll1/macro_blocks.org
+++ b/proll1/macro_blocks.org
@@ -1,6 +1,8 @@
 
 * main 
 
+  only syntax sugar, nothing fancy 
+
 #+name: main
 #+begin_src scheme :noweb yes :tangle src_out/macro_blocks.rkt
   
